--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
   <div class="card">
     <img src="besthouse.jpg" class="card-img-top" alt="Gallery"><blockquote class="blockquote mb-0 card-body"><p><strong>GALLERY</strong></p></blockquote>
   </div></a>
-
+<h3 class="text-center" style="font-family: 'Syne Mono',monospace; color: pink;">
+sometime we take our students to real time experiences !!</h3>
   <a href="about.html">
   <div class="card">
     <img src="staff.jpg" class="card-img-top" alt="Teaching">
