--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
   </head>
   <style type="text/css">
     body{
-      background-color: rgba(255,5,10,0.3);
+      background-color: #002952;
+    
       text:text-center;
     }
 
@@ -138,30 +139,33 @@ Success is not achieved in a day or in a night.  It is rather a long steady proc
     </div></div></div>
 
 
-   <div class="card text-center ">
-  <div class="card-header bg-dark text-white" style="font-family:'Henny Penny',cursive; ">
-    <h2><strong>ADDRESS</strong></h2>
-  </div>
+   <div id="footer"class="row mb-3 text-white padding-top text-center"style="width: 100%" >
+    <div class="col-md-6 themed-grid-col"> 
+    <h5 class="card-header text-center padding-bottom" style="color: black;"><strong>ADDRESS</strong></h5>  
+    <h6 class="card-title my-2"><u>BRIGHT COACHING CLASSES</u></h6>
+    <p class="card-text my-4">Behind shambhu-mahadev temple , vidya nagar ,Parli.V ,Maharashtra.</p>
+    </div>
   
- <div id="footer"class="container-fluid text-white" >
-  <div class="card-body" >
-    <h5 class="card-title">BRIGHT COACHING CLASSES</h5>
-    <p class="card-text">Behind shambhu-mahadev temple , vidya nagar , Parli.V , Dist.Beed , Maharashtra.</p>
-    
-  </div>
 
-  <hr style="height:10px ">
-
-  <h3 style="color: black;">Contact us</h3>
+  
+   <div class="col-md-6 themed-grid-col">
+  <h5 class="card-header text-center padding-bottom" style="color: black;"><strong>CONTACT US</strong></h5> 
   <hr style="width: 10px">
-  <div class="container text-center"><h4 >  <italic>&#x1F4E7;    rasikaphutke24@gmail.com</italic></h4></div>
+  <div class="text-center"><h6>  <italic>&#x1F4E7;    rasikaphutke24@gmail.com</italic></h6>
+  <p class="text-white">&#128222;+91-9404073741</p>
+  </div>
   <hr style="width: 30px">
-  <footer class="container text-center my-4">
+</div>
+  
+  
+
+<footer class=" text-center my-4 bg-light" style="width: 100%">
     <p class="float-right"><a href="index.html">Back to top</a></p>
-    <p class="text-center">© 2009-2020 Bright Coaching Classes,Pvt. ltd.
+    <p class="text-center" style="color: black;">© 2009-2020 Bright Coaching Classes,<p style="color: black;">Pvt. ltd.</p>
     . <a href="#">Privacy</a> · <a href="#">Terms</a></p>
   </footer>
-  </div>
+</div>
+
 </div>
 
     <!-- Optional JavaScript -->
